--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
+              "src/theme.scss",
               "node_modules/aos/dist/aos.css"
             ],
             "scripts": []
@@ -80,6 +81,7 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
+              "src/theme.scss",
               "node_modules/aos/dist/aos.css"
             ],
             "scripts": []
