--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aos": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
