--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "add-to-calendar-button": "^2.2.9",
     "aos": "^2.3.4",
     "rxjs": "~7.8.0",
